sdk/c/include/hdds.h

/**
 * Error codes (C-compatible enum)
 *
 * # Error Code Categories
 *
 * - **0-9**: Success and generic errors
 * - **10-19**: Configuration errors
 * - **20-29**: I/O and transport errors
 * - **30-39**: Type and serialization errors
 * - **40-49**: QoS and resource errors
 * - **50-59**: Security errors
 */
typedef enum HddsError {
  /**
   * Operation completed successfully
   */
  HDDS_OK = 0,
  /**
   * Invalid argument provided (null pointer, invalid value)
   */
  HDDS_INVALID_ARGUMENT = 1,
  /**
   * Requested resource not found
   */
  HDDS_NOT_FOUND = 2,
  /**
   * Generic operation failure
   */
  HDDS_OPERATION_FAILED = 3,
  /**
   * Memory allocation failed
   */
  HDDS_OUT_OF_MEMORY = 4,
  /**
   * Invalid configuration settings
   */
  HDDS_CONFIG_ERROR = 10,
  /**
   * Invalid domain ID (must be 0-232)
   */
  HDDS_INVALID_DOMAIN_ID = 11,
  /**
   * Invalid participant ID (must be 0-119)
   */
  HDDS_INVALID_PARTICIPANT_ID = 12,
  /**
   * No available participant ID (all 120 ports occupied)
   */
  HDDS_NO_AVAILABLE_PARTICIPANT_ID = 13,
  /**
   * Invalid entity state for requested operation
   */
  HDDS_INVALID_STATE = 14,
  /**
   * Generic I/O error
   */
  HDDS_IO_ERROR = 20,
  /**
   * UDP transport send/receive failed
   */
  HDDS_TRANSPORT_ERROR = 21,
  /**
   * Topic registration failed
   */
  HDDS_REGISTRATION_FAILED = 22,
  /**
   * Operation would block but non-blocking mode requested
   */
  HDDS_WOULD_BLOCK = 23,
  /**
   * Type mismatch between writer and reader
   */
  HDDS_TYPE_MISMATCH = 30,
  /**
   * CDR serialization failed
   */
  HDDS_SERIALIZATION_ERROR = 31,
  /**
   * Buffer too small for encoding
   */
  HDDS_BUFFER_TOO_SMALL = 32,
  /**
   * CDR endianness mismatch
   */
  HDDS_ENDIAN_MISMATCH = 33,
  /**
   * QoS policies are incompatible between endpoints
   */
  HDDS_QOS_INCOMPATIBLE = 40,
  /**
   * Requested feature or operation is not supported
   */
  HDDS_UNSUPPORTED = 41,
  /**
   * Permission denied by access control (DDS Security)
   */
  HDDS_PERMISSION_DENIED = 50,
  /**
   * Authentication failed
   */
  HDDS_AUTHENTICATION_FAILED = 51,
} HddsError;
/**
 * Opaque handle to a Participant
 */
typedef struct HddsParticipant {
  uint8_t PRIVATE[0];
} HddsParticipant;
/**
 * Opaque handle to a GuardCondition
 */
typedef struct HddsGuardCondition {
  uint8_t PRIVATE[0];
} HddsGuardCondition;
/**
 * Opaque handle to a `DataWriter`
 */
typedef struct HddsDataWriter {
  uint8_t PRIVATE[0];
} HddsDataWriter;
/**
 * Opaque handle to a QoS profile.
 */
typedef struct HddsQoS {
  uint8_t PRIVATE[0];
} HddsQoS;
/**
 * Opaque handle to a `DataReader`
 */
typedef struct HddsDataReader {
  uint8_t PRIVATE[0];
} HddsDataReader;
/**
 * Opaque handle to a StatusCondition
 */
typedef struct HddsStatusCondition {
  uint8_t PRIVATE[0];
} HddsStatusCondition;
/**
 * Create a new DDS Participant with default settings (UdpMulticast transport)
 *
 * For network DDS communication, this is the recommended function.
 * Use `hdds_participant_create_with_transport` if you need intra-process mode.
 */
 struct HddsParticipant *hdds_participant_create(const char *aName);
/**
 * Destroy a Participant
 */
 void hdds_participant_destroy(struct HddsParticipant *aParticipant);
/**
 * Get the participant-level graph guard condition.
 */

const struct HddsGuardCondition *hdds_participant_graph_guard_condition(struct HddsParticipant *aParticipant);
/**
 * Create a `DataWriter` for a topic
 *
 * # Safety
 * - `participant` must be a valid pointer returned from `hdds_participant_create`
 * - `topic_name` must be a valid null-terminated C string
 */

struct HddsDataWriter *hdds_writer_create(struct HddsParticipant *aParticipant,
                                          const char *aTopicName);
/**
 * Write data to a topic
 *
 * # Safety
 * - `writer` must be a valid pointer returned from `hdds_writer_create`
 * - `data` must point to valid memory of at least `len` bytes
 */

enum HddsError hdds_writer_write(struct HddsDataWriter *aWriter,
                                 const void *aData,
                                 uintptr_t aLen);
/**
 * Destroy a `DataWriter`
 *
 * # Safety
 * - `writer` must be a valid pointer returned from `hdds_writer_create`
 * - Must not be called more than once with the same pointer
 */
 void hdds_writer_destroy(struct HddsDataWriter *aWriter);
/**
 * Create a `DataWriter` for a topic with custom QoS
 *
 * # Safety
 * - `participant` must be a valid pointer returned from `hdds_participant_create`
 * - `topic_name` must be a valid null-terminated C string
 * - `qos` must be a valid pointer returned from `hdds_qos_*` functions (or NULL for default)
 */

struct HddsDataWriter *hdds_writer_create_with_qos(struct HddsParticipant *aParticipant,
                                                   const char *aTopicName,
                                                   const struct HddsQoS *aQos);
/**
 * Create a `DataReader` for a topic
 *
 * # Safety
 * - `participant` must be a valid pointer returned from `hdds_participant_create`
 * - `topic_name` must be a valid null-terminated C string
 */

struct HddsDataReader *hdds_reader_create(struct HddsParticipant *aParticipant,
                                          const char *aTopicName);
/**
 * Create a `DataReader` for a topic with custom QoS
 *
 * # Safety
 * - `participant` must be a valid pointer returned from `hdds_participant_create`
 * - `topic_name` must be a valid null-terminated C string
 * - `qos` must be a valid pointer returned from `hdds_qos_*` functions (or NULL for default)
 */

struct HddsDataReader *hdds_reader_create_with_qos(struct HddsParticipant *aParticipant,
                                                   const char *aTopicName,
                                                   const struct HddsQoS *aQos);
/**
 * Take data from a topic (non-blocking)
 *
 * # Safety
 * - `reader` must be a valid pointer returned from `hdds_reader_create`
 * - `data_out` must point to a valid buffer of at least `max_len` bytes
 * - `len_out` must be a valid pointer to write the actual data length
 */

enum HddsError hdds_reader_take(struct HddsDataReader *aReader,
                                void *aDataOut,
                                uintptr_t aMaxLen,
                                uintptr_t *aLenOut);
/**
 * Destroy a `DataReader`
 *
 * # Safety
 * - `reader` must be a valid pointer returned from `hdds_reader_create`
 * - Must not be called more than once with the same pointer
 */
 void hdds_reader_destroy(struct HddsDataReader *aReader);
/**
 * Get the status condition associated with a reader.
 */
 const struct HddsStatusCondition *hdds_reader_get_status_condition(struct HddsDataReader *aReader);
/**
 * Create a default QoS profile (best-effort, volatile).
 *
 * # Safety
 * The returned pointer must be freed with `hdds_qos_destroy`.
 */
 struct HddsQoS *hdds_qos_default(void);
/**
 * Create a best-effort QoS profile.
 *
 * Best-effort QoS does not guarantee delivery but has lower overhead.
 *
 * # Safety
 * The returned pointer must be freed with `hdds_qos_destroy`.
 */
 struct HddsQoS *hdds_qos_best_effort(void);
/**
 * Create a reliable QoS profile.
 *
 * Reliable QoS guarantees delivery with NACK-driven retransmission.
 *
 * # Safety
 * The returned pointer must be freed with `hdds_qos_destroy`.
 */
 struct HddsQoS *hdds_qos_reliable(void);
/**
 * Create an RTI Connext-compatible QoS profile.
 *
 * Uses RTI Connext DDS 6.x defaults for interoperability.
 *
 * # Safety
 * The returned pointer must be freed with `hdds_qos_destroy`.
 */
 struct HddsQoS *hdds_qos_rti_defaults(void);
/**
 * Destroy a QoS profile.
 *
 * # Safety
 * - `qos` must be a valid pointer returned from a `hdds_qos_*` creation function.
 * - Must not be called more than once with the same pointer.
 */
 void hdds_qos_destroy(struct HddsQoS *aQos);
/**
 * Set history depth (KEEP_LAST) on a QoS profile.
 *
 * # Safety
 * - `qos` must be a valid pointer from `hdds_qos_*` functions.
 */
 enum HddsError hdds_qos_set_history_depth(struct HddsQoS *aQos, uint32_t aDepth);
/**
 * Set history policy to KEEP_ALL.
 *
 * # Safety
 * - `qos` must be a valid pointer from `hdds_qos_*` functions.
 */
 enum HddsError hdds_qos_set_history_keep_all(struct HddsQoS *aQos);
/**
 * Set durability to VOLATILE.
 *
 * # Safety
 * - `qos` must be a valid pointer from `hdds_qos_*` functions.
 */
 enum HddsError hdds_qos_set_volatile(struct HddsQoS *aQos);
/**
 * Set durability to TRANSIENT_LOCAL.
 *
 * # Safety
 * - `qos` must be a valid pointer from `hdds_qos_*` functions.
 */
 enum HddsError hdds_qos_set_transient_local(struct HddsQoS *aQos);
/**
 * Set durability to PERSISTENT.
 *
 * # Safety
 * - `qos` must be a valid pointer from `hdds_qos_*` functions.
 */
 enum HddsError hdds_qos_set_persistent(struct HddsQoS *aQos);
/**
 * Set reliability to RELIABLE.
 *
 * # Safety
 * - `qos` must be a valid pointer from `hdds_qos_*` functions.
 */
 enum HddsError hdds_qos_set_reliable(struct HddsQoS *aQos);
/**
 * Set reliability to BEST_EFFORT.
 *
 * # Safety
 * - `qos` must be a valid pointer from `hdds_qos_*` functions.
 */
 enum HddsError hdds_qos_set_best_effort(struct HddsQoS *aQos);
/**
 * Set deadline period in nanoseconds.
 *
 * # Safety
 * - `qos` must be a valid pointer from `hdds_qos_*` functions.
 */
 enum HddsError hdds_qos_set_deadline_ns(struct HddsQoS *aQos, uint64_t aPeriodNs);
/**
 * Set lifespan duration in nanoseconds.
 *
 * # Safety
 * - `qos` must be a valid pointer from `hdds_qos_*` functions.
 */
 enum HddsError hdds_qos_set_lifespan_ns(struct HddsQoS *aQos, uint64_t aDurationNs);
/**
 * Set ownership to SHARED.
 *
 * # Safety
 * - `qos` must be a valid pointer from `hdds_qos_*` functions.
 */
 enum HddsError hdds_qos_set_ownership_shared(struct HddsQoS *aQos);
/**
 * Set ownership to EXCLUSIVE with given strength.
 *
 * # Safety
 * - `qos` must be a valid pointer from `hdds_qos_*` functions.
 */
 enum HddsError hdds_qos_set_ownership_exclusive(struct HddsQoS *aQos, int32_t aStrength);
/**
 * Add a partition name to the QoS.
 *
 * # Safety
 * - `qos` must be a valid pointer from `hdds_qos_*` functions.
 * - `partition` must be a valid null-terminated C string.
 */
 enum HddsError hdds_qos_add_partition(struct HddsQoS *aQos, const char *aPartition);
/**
 * Check if QoS is reliable.
 *
 * # Safety
 * - `qos` must be a valid pointer from `hdds_qos_*` functions.
 */
 bool hdds_qos_is_reliable(const struct HddsQoS *aQos);
/**
 * Check if QoS is transient-local.
 *
 * # Safety
 * - `qos` must be a valid pointer from `hdds_qos_*` functions.
 */
 bool hdds_qos_is_transient_local(const struct HddsQoS *aQos);
/**
 * Get history depth.
 *
 * # Safety
 * - `qos` must be a valid pointer from `hdds_qos_*` functions.
 */
 uint32_t hdds_qos_get_history_depth(const struct HddsQoS *aQos);
/**
 * Get deadline period in nanoseconds.
 *
 * Returns `u64::MAX` if infinite.
 *
 * # Safety
 * - `qos` must be a valid pointer from `hdds_qos_*` functions.
 */
 uint64_t hdds_qos_get_deadline_ns(const struct HddsQoS *aQos);
/**
 * Get lifespan duration in nanoseconds.
 *
 * Returns `u64::MAX` if infinite.
 *
 * # Safety
 * - `qos` must be a valid pointer from `hdds_qos_*` functions.
 */
 uint64_t hdds_qos_get_lifespan_ns(const struct HddsQoS *aQos);
/**
 * Check if ownership is exclusive.
 *
 * # Safety
 * - `qos` must be a valid pointer from `hdds_qos_*` functions.
 */
 bool hdds_qos_is_ownership_exclusive(const struct HddsQoS *aQos);
/**
 * Set liveliness to automatic with given lease duration in nanoseconds.
 *
 * # Safety
 * - `qos` must be a valid pointer from `hdds_qos_*` functions.
 */
 enum HddsError hdds_qos_set_liveliness_automatic_ns(struct HddsQoS *aQos, uint64_t aLeaseNs);
/**
 * Set liveliness to manual-by-participant with given lease duration in nanoseconds.
 *
 * # Safety
 * - `qos` must be a valid pointer from `hdds_qos_*` functions.
 */

enum HddsError hdds_qos_set_liveliness_manual_participant_ns(struct HddsQoS *aQos,
                                                             uint64_t aLeaseNs);
/**
 * Set liveliness to manual-by-topic with given lease duration in nanoseconds.
 *
 * # Safety
 * - `qos` must be a valid pointer from `hdds_qos_*` functions.
 */
 enum HddsError hdds_qos_set_liveliness_manual_topic_ns(struct HddsQoS *aQos, uint64_t aLeaseNs);
/**
 * Set time-based filter minimum separation in nanoseconds.
 *
 * # Safety
 * - `qos` must be a valid pointer from `hdds_qos_*` functions.
 */
 enum HddsError hdds_qos_set_time_based_filter_ns(struct HddsQoS *aQos, uint64_t aMinSeparationNs);
/**
 * Set latency budget in nanoseconds.
 *
 * # Safety
 * - `qos` must be a valid pointer from `hdds_qos_*` functions.
 */
 enum HddsError hdds_qos_set_latency_budget_ns(struct HddsQoS *aQos, uint64_t aBudgetNs);
/**
 * Set transport priority.
 *
 * # Safety
 * - `qos` must be a valid pointer from `hdds_qos_*` functions.
 */
 enum HddsError hdds_qos_set_transport_priority(struct HddsQoS *aQos, int32_t aPriority);
/**
 * Set resource limits.
 *
 * Use `usize::MAX` for any value to indicate unlimited.
 *
 * # Safety
 * - `qos` must be a valid pointer from `hdds_qos_*` functions.
 */

enum HddsError hdds_qos_set_resource_limits(struct HddsQoS *aQos,
                                            uintptr_t aMaxSamples,
                                            uintptr_t aMaxInstances,
                                            uintptr_t aMaxSamplesPerInstance);
/**
 * Clone a QoS profile.
 *
 * # Safety
 * - `qos` must be a valid pointer from `hdds_qos_*` functions.
 * - The returned pointer must be freed with `hdds_qos_destroy`.
 */
 struct HddsQoS *hdds_qos_clone(const struct HddsQoS *aQos);